<resources>
    <string name="app_name">NYCS_ChallengeJPMC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="school_name">School Name</string>
    <string name="school_location">Location</string>
    <string name="details_description">Description</string>
    <string name="sat_scores">SAT Scores</string>
    <string name="avg_score">AVG score</string>
    <string name="details_address">address</string>
    <string name="details_e_mail">E-mail</string>
    <string name="details_phone">Phone</string>
    <string name="score_math">Math</string>
    <string name="score_reading">Reading</string>
    <string name="scores_writing">Writing</string>
    <string name="num_sat_takers">Number of SAT Test Takers: </string>
    <string name="action_search">Search</string>
</resources>