<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_school"
            android:contentDescription="@string/school_name"
            android:textAlignment="center"
            android:layout_marginTop="30sp"/>

        <TextView
            android:id="@+id/school_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_name"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="20dp"
            android:elevation="30dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/details_description"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_address"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_address"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_email"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_e_mail"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_phone"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_phone"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"/>

            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="20dp"
            android:elevation="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_sat_takers"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/sat_takers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TableRow
                android:background="@color/black"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sat_scores"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_score"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:textAlignment="center"/>
            </TableRow>

            <TableRow
                android:background="@color/row_table"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_math"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/score_math"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textAlignment="center"/>
            </TableRow>

            <TableRow
                android:background="@color/row_table"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_reading"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/score_reading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textAlignment="center"/>
            </TableRow>

            <TableRow
                android:background="@color/row_table"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scores_writing"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/score_writing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textAlignment="center"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>